# project1

./: README.md  pyproject.toml
.github/workflows/: actions.yml
seqparser/: parse.py  seq.py
tests/: test_parsers.py  test_transcribe.py
